[package]
name = "bevy_movement"
version = "0.1.0"
edition = "2021"
authors = ["Piotr Świercz <tajo48@proton.me>"]
description = "A kinematic character controller crate for Bevy using Avian3D physics"
license = "MIT"
repository = "https://github.com/yourusername/bevy_movement"
keywords = [
    "bevy",
    "physics",
    "character",
    "controller",
    "avian3d",
    "kinematic",
]
categories = ["game-development", "game-engines"]

[dependencies]
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
bevy = "0.17.1"

[[example]]
name = "basic"
path = "examples/basic.rs"
